# aos-zmkl-worker

./: Cargo.toml  LICENSE  README.md
models/1l_average/: model.compiled  proof.json  settings.json  vk.key  witness.json
models/2l_relu_fc/: model.compiled  proof.json  settings.json  vk.key  witness.json
src/: config.rs  error.rs  lib.rs  main.rs
src/cli/: mod.rs
src/handler/: .handler.rs.swp  handler.rs
src/server/: server.rs
src/templates/: config.yaml
templates/: config.yaml
