[package]
name = "zkml_worker"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.5", features = ["macros"] }
tokio = { version = "1.38.0", features = ["full"] }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
hyper = { version = "0.14", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower = { version = "0.4.13", features = ["util", "timeout", "load-shed", "limit"] }
tower-http = { version = "0.5.2", features = ["add-extension", "auth", "compression-full", "trace", "cors"] }
thiserror = "1.0.22"
reqwest = { version = "0.11", features = ["blocking", "json"] }
tempfile = "3.5"
structopt = "0.3.11"
tracing-appender = "0.2.3"

